--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --lightGray: #eeeef0;
   --gray:#9a9a9a;
+  --lightBlack:#292929;
 }
 
 .App {
@@ -15,7 +16,7 @@
   border-bottom: 2px solid var(--lightGray);
   display:flex;
   flex-direction: column;
-  background-color: black;
+  background-color: var(--lightBlack);
 }
 .title-div{
 }
